testsuite/tests/properties/invalid_prop_args/bad_type/test.lkt
from common import FooNode, BarCode

class BarNode: BarCode {
    fun base_prop(x: Symbol): Int = 12
}
